...
                  color = selectedTeamColor))
        },
        dialogTitle = "Confirm Flight",
        dialogText = "Are you sure you want to confirm this flight ?",
    )
  }
  LazyColumn(Modifier.testTag("LazyList")) {
    item {
      Text(
          modifier = Modifier.fillMaxWidth().padding(top = 18.dp, bottom = 25.dp),
          text = "Confirmation of Flight $id",
          fontSize = 24.sp,
          fontWeight = FontWeight.Bold,
...
      elementShow("Passengers nb", "$nPassengers", fontSize)
      elementShow("Flight type", flightType.name, fontSize)
      teamRoles.withIndex().forEach() { (i, role) ->
        elementShow("Teammate" + " " + (i + 1).toString(), role.roleType.name, fontSize)
      }
      if (balloon != null) {
        elementShow("Balloon", balloon.name, fontSize)
      }
      if (basket != null) {
        elementShow("Basket", basket.name, fontSize)
      }
      elementShow(
          "Date",
          (date.dayOfMonth.toString() + " " + date.month.toString() + " $timeSlot").lowercase(),
          fontSize)
      vehicles.withIndex().forEach() { (i, vehicle) ->
...
              fontSize = 16.sp)
        }
      }
      // meetUp Time for passengers :
      Text(
          modifier = Modifier.fillMaxWidth(),
          text = "MeetUp (passengers)",
          fontSize = fontSize,
          fontWeight = FontWeight.Bold,
          textAlign = TextAlign.Center)

      Column(
          modifier = Modifier.padding(2.dp),
...
      }
      if (selectedTeamMeetupTime != null &&
          selectedDepartureTime != null &&
          selectedPassengersMeetupTime != null) {
        Box(modifier = Modifier.fillMaxWidth().padding(2.dp), contentAlignment = Alignment.Center) {
          ClickButton(
              text = "Confirm",
              onClick = { showDialog = true },
              modifier = Modifier.fillMaxWidth(0.7f).testTag("ConfirmThisFlightButton"),
              color = Color.Green)
        }
      }
    }
...
            }
            val time = LocalTime.of(hours, minutes)
            keyboardController?.hide()
            onTimeSelected(time)
          },
      ) {
        Text(text = "Set Time")
      }
    }
  }
}
/**
 * Composable function to create a dropdown menu for selecting an option from a list.
...
@Composable
fun OptionSelector(
    options: List<FlightColor>,
    onOptionSelected: (FlightColor) -> Unit,
) {
  var expanded by remember { mutableStateOf(false) }
  var selected by remember { mutableStateOf("Select Color") }
  Column {
    OutlinedButton(onClick = { expanded = true }) { Text(text = selected) }

    DropdownMenu(expanded = expanded, onDismissRequest = { expanded = false }) {
      options.forEach { option ->
        DropdownMenuItem(
...
